--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<div style="text-align:center">
+<!-- <div style="text-align:center">
   <h1> Welcome to {{ title }}! </h1>
 </div>
 
@@ -6,4 +6,22 @@
   <a routerLink="/home" routerLinkActive="active">HOME</a>
   <a routerLink="/result" routerLinkActive="active">RESULT</a>
 </nav>
-<router-outlet></router-outlet>
+<router-outlet></router-outlet> -->
+
+<!-- Header -->
+<header class="container">
+    <nav class="text-center">
+        <a class="navbar-brand" routerLink="/home" routerLinkActive="active">
+          <img src="../assets/image-2.png" alt="Wood Hotel Group" class="img-fluid">
+        </a>
+    </nav>
+  </header>
+  <!-- SPA -->
+  <router-outlet></router-outlet>
+  <!-- Footer -->
+  <footer class="text-center w-100 mt-5 mr-5">
+  <div>
+      <div class="footer-copyright"> © 2019 Copyright: WOOD HOTEL GROUP
+        </div>
+  </div>
+  </footer>
