--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,14 +1,3 @@
-<!-- <div style="text-align:center">
-  <h1> Welcome to {{ title }}! </h1>
-</div>
-
-<nav>
-  <a routerLink="/home" routerLinkActive="active">HOME</a>
-  <a routerLink="/result" routerLinkActive="active">RESULT</a>
-</nav>
-<router-outlet></router-outlet> -->
-
-<!-- Header -->
 <header class="container">
     <nav class="text-center">
         <a class="navbar-brand" routerLink="/home" routerLinkActive="active">
@@ -17,11 +6,14 @@
     </nav>
   </header>
   <!-- SPA -->
-  <router-outlet></router-outlet>
+  <div class="content">
+      <router-outlet></router-outlet>
+  </div>
   <!-- Footer -->
   <footer class="text-center w-100 mt-5 mr-5">
   <div>
-      <div class="footer-copyright"> © 2019 Copyright: WOOD HOTEL GROUP
+      <div class="footer-copyright"> © 2019 Copyright: 
+        <a style="color: white" href="https://github.com/gisellem22">WOOD HOTEL GROUP</a>
         </div>
   </div>
   </footer>
