--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -18,7 +18,7 @@
             </div>
             <div class="form-group col-md-3 mb-3">
                 <button class="btn btn-outline-secondary btn-block" type="button" routerLink="/result"
-                    routerLinkActive="active">Buscar</button>
+                    routerLinkActive="active" (click)="getResult()">Buscar</button>
             </div>
         </div>
     </form>
