se crea funciones para calcular menor valor (result)

--- a/src/app/components/result/result.component.html
+++ b/src/app/components/result/result.component.html
@@ -1,1 +1,9 @@
 <p>result works!</p>
+<div>
+        <p>{{from}}</p>
+        <p>{{to}}</p>
+        <p>{{client}}</p>
+        <p>from: {{dateFrom}}</p>
+        <p>to: {{dateTo}}</p>
+
+    </div>
