--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -17,9 +17,14 @@
                 </select>
             </div>
             <div class="form-group col-md-3 mb-3">
-                <button class="btn btn-outline-secondary btn-block" type="button" routerLink="/result"
-                    routerLinkActive="active" (click)="getResult()">Buscar</button>
+                <button class="btn btn-outline-secondary btn-block" type="button" 
+                (click)="getResult()">Buscar</button>
             </div>
         </div>
     </form>
+    <div class="content">
+            <app-result></app-result>
+    </div>
 </div>
+
+<!-- routerLink="/result" routerLinkActive="active" -->
