--- a/src/app/components/result/result.component.html
+++ b/src/app/components/result/result.component.html
@@ -1,6 +1,6 @@
 <div class="container">
-  <div class="row justify-content-center" *ngIf="final">
-    <div class="card col-md-9 mb-3 p-2" style="max-width: 900px;" *ngFor="let hotel of final">
+  <div class="row justify-content-center" *ngIf="theLowestHotelRate">
+    <div class="card col-md-9 mb-3 p-2" style="max-width: 900px;" *ngFor="let hotel of theLowestHotelRate">
       <div class="row no-gutters">
         <div class="col-md-5">
           <img [src]="hotel.img" class="card-img" style="max-height: 200px" alt="hotel.name">
@@ -12,13 +12,13 @@
           <div class="row mt-5">
               <div class="col-md-6">
               <div class="card-body p-0 ml-3">
-                  <p class="card-text">Llegada: {{from}}</p>
-                  <p class="card-text">Cliente: {{client}}</p>
+                  <p class="card-text">Llegada: {{dateFrom}}</p>
+                  <p class="card-text">Cliente: {{clientType}}</p>
                 </div>
               </div>
               <div class="col-md-6">
                 <div class="card-body p-0">
-                    <p class="card-text">Salida: {{to}}</p>
+                    <p class="card-text">Salida: {{dateTo}}</p>
                     <h4 class="card-text">TOTAL:</h4>
                     <h4 class="card-text" style="color:#428500">{{hotel.total}}</h4>
                 </div>
