--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -10,10 +10,10 @@
       <router-outlet></router-outlet>
   </div>
   <!-- Footer -->
-  <!-- <footer class="text-center w-100 mt-5 mr-5">
+  <footer class="text-center w-100 mt-5 mr-5">
   <div>
       <div class="footer-copyright"> © 2019 Copyright: 
-        <a style="color: white" href="https://github.com/gisellem22">WOOD HOTEL GROUP</a>
+        <a style="color: white;" href="https://github.com/gisellem22">WOOD HOTEL GROUP</a>
         </div>
   </div>
-  </footer> -->
+  </footer>
