se agrega validación al form y estilo en home.component

--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -21,6 +21,9 @@
                 (click)="getResult()">Buscar</button>
             </div>
         </div>
+        <div *ngIf ="warning" class="warning">
+            <p> {{warning}} </p>
+        </div>
     </form>
     <div class="content">
             <app-result></app-result>
