--- a/src/app/components/result/result.component.html
+++ b/src/app/components/result/result.component.html
@@ -22,7 +22,7 @@
                 <div class="card-body p-0 ml-3">
                     <p class="card-text">Cliente: {{clientType}}</p>
                     <br>
-                    <h4 class="card-text">TOTAL: <span style="color: #443694;">{{hotel.total}}</span></h4>
+                    <h4 class="card-text">TOTAL: <span style="color: #443694;">${{hotel.total}}</span></h4>
                 </div>
               </div>
           </div>
