--- a/src/styles.css
+++ b/src/styles.css
@@ -4,5 +4,21 @@
     box-sizing: border-box;
 }
 html, body {
-    height: 100%;
+    height: 100vh;
+    width: 100vw;
+    display: flex;
+    flex-wrap: wrap;
+    margin: 0;
+    padding: 0;
+}
+.root {
+flex: 1;
+}
+footer {
+    background: rgb(71, 71, 71);
+    color: white;
+    width: 100%;
+    height: 80px; 
+    line-height: 60px;
+    align-self: flex-end;
 }
